# argus

./: .gitignore  README.md  pyproject.toml
argus/: __init__.py  camera.py  drugs.py  image.py  process.py
localframe/: bluetooth.py  camera.py  display.py  files.py  library_functions.py  motion.py
pres/: pres.md
pres_helpers/: __init__.py
scripts/: analysis.py  argus-refactor.py  argus.py  frame-camera.py  simple-argus.py  simple-pi-argus.py  soa-demo.py  vision.py
